Fixed the display of the Create New Specialization popup window on Firefox.

--- a/App/web/src/Common/Components/Popup.css
+++ b/App/web/src/Common/Components/Popup.css
@@ -6,7 +6,7 @@
 
 	grid-template-rows: auto 1fr;
 	
-	position: absolute;
+	position: fixed;
 	left: 50%;
 	top: 50%;
 	transform: translate(-50%, -50%);
@@ -16,8 +16,8 @@
 	border-radius: var(--radius);
 	box-shadow: 0px 0px 5px 5px gray;
 	
-	min-width: fit-content;
-
+	min-width: min-content;
+	width: auto;
 	max-height: 100vh;
 	max-width: 100vw;
 }
